new photos a adjustments to test

--- a/test.html
+++ b/test.html
@@ -190,6 +190,8 @@
             </div>
         </div>
     </div>
+
+
     <!-- Modals here-->
     <!--Modal: 2021-->
     <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -202,10 +204,6 @@
                 </div>
                 <!--Footer-->
                 <div class="modal-footer justify-content-center">
-                    <span class="mr-4">Spread the word!</span>
-                    <!--Facebook--><a type="button" class="btn-floating btn-sm btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!--Twitter--><a type="button" class="btn-floating btn-sm btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!--Linkedin--><a type="button" class="btn-floating btn-sm btn-ins"><i class="fab fa-linkedin-in"></i></a>
                     <button type="button" class="btn btn-outline-primary btn-rounded btn-md ml-4" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -319,10 +317,9 @@
         </div>
     </div>
 
-
     <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
         <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
-        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 30%;">Temp</h3>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Digital & Physical Art</h3>
     </div>
     <div class="row">
         <div style="padding-right: 2%;" class="column">
@@ -332,8 +329,8 @@
             <div class="captions">Plaid Textile Featuring Motif</div>
         </div>
         <div style="padding-right: 2%;" class="column">
-            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_1.png" style="width:100%">
-            <div class="captions">Final Project Mood Board </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_2.png" style="width:100%">
+            <div class="captions"> Untitled </div>
         </div>
         <div style="padding-right: 2%;" class="column">
             <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_4tb.png" style="width:100%">
@@ -350,44 +347,38 @@
         <hr width="75%" color="#d8ff33" border-width="10px">
     </div>
 
-
-
     <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
         <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2020</h3>
-        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 30%;">Wearable Art</h3>
-        <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 60%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Wearable Art</h3>
+        <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
     </div>
     <div class="row">
         <div style="padding-right: 2%;" class="column">
             <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_1tb.png" style="width:100%">
-            <div class="captions">Fabricademy </div>
-            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_2tb.png" style="width:100%">
-            <div class="captions">Plaid Textile Featuring Motif</div>
+            <div class="captions">Scrap Cotton </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_5tb.png" style="width:100%">
+            <div class="captions">Stamping on Scrap Denim </div>
         </div>
         <div style="padding-right: 2%;" class="column">
             <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_1.png" style="width:100%">
-            <div class="captions">Final Project Mood Board </div>
         </div>
         <div style="padding-right: 2%;" class="column">
             <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
-            <div class="captions">Fabricademy </div>
-            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
-            <div class="captions">Fabricademy </div>
+            <div class="captions"> Stamping on Scrap Cotton & Vinyl </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_2tb.png" style="width:100%">
+            <div class="captions">Acrylic Pour on Scrap Denim</div>
         </div>
         <div style="padding-right: 2%;" class="column">
             <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_2.png" style="width:100%">
-            <div class="captions">Fabricademy </div>
         </div>
     </div>
     <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 3%;" class="container my-auto text-center">
         <hr width="75%" color="#d8ff33" border-width="10px">
     </div>
 
-
-
     <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
         <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2019</h3>
-        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 30%;">Textile Design</h3>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Textile Design</h3>
     </div>
     <div class="row">
         <div style="padding-right: 2%;" class="column">
@@ -407,8 +398,38 @@
             <div class="captions">Fabricademy </div>
         </div>
         <div style="padding-right: 2%;" class="column">
-            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_1.png" style="width:100%">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_5.png" style="width:100%">
+            <div class="captions"> Indexed Color Motif Mood Board </div>
+        </div>
+    </div>
+    <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 3%;" class="container my-auto text-center">
+        <hr width="75%" color="#d8ff33" border-width="10px">
+    </div>
+
+    <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+        <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2018</h3>
+        <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Interactive Art Pages</h3>
+    </div>
+    <div class="row">
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
             <div class="captions">Fabricademy </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+            <div class="captions">Plaid Textile Featuring Motif</div>
+        </div>
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_1.png" style="width:100%">
+            <div class="captions">Final Project Mood Board </div>
+        </div>
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_4tb.png" style="width:100%">
+            <div class="captions">Fabricademy </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+            <div class="captions">Fabricademy </div>
+        </div>
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_5.png" style="width:100%">
+            <div class="captions"> Indexed Color Motif Mood Board </div>
         </div>
     </div>
     <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 3%;" class="container my-auto text-center">
@@ -469,4 +490,4 @@
                                               </div> 
 
 
--->
+≥÷ -->
