uplaod temp nav, new test html

--- a/test.html
+++ b/test.html
@@ -402,6 +402,28 @@
             <div class="captions"> Indexed Color Motif Mood Board </div>
         </div>
     </div>
+    <div class="row">
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
+            <div class="captions">Fabricademy </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+            <div class="captions">Plaid Textile Featuring Motif</div>
+        </div>
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_1.png" style="width:100%">
+            <div class="captions">Final Project Mood Board </div>
+        </div>
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_4tb.png" style="width:100%">
+            <div class="captions">Fabricademy </div>
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+            <div class="captions">Fabricademy </div>
+        </div>
+        <div style="padding-right: 2%;" class="column">
+            <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2019/artist_2019_5.png" style="width:100%">
+            <div class="captions"> Indexed Color Motif Mood Board </div>
+        </div>
+    </div>
     <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 3%;" class="container my-auto text-center">
         <hr width="75%" color="#d8ff33" border-width="10px">
     </div>
@@ -452,6 +474,10 @@
 </html>
 
 <!--
+
+     margin-bottom: 20px;
+
+     
     <div id="overlay" onclick="off()">
                             <div class="overlay_content">
                                 <img class="timeline_magnify" style="height: auto; width: auto;" src="img/gears.jpg">
