testing row w/ 2 cols

--- a/test2.html
+++ b/test2.html
@@ -139,7 +139,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Final Project Motifs  </div>
+                                <div class="captions"> Final Project Motifs </div>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Final Project Motifs  </div>
+                                <div class="captions"> Final Project Motifs </div>
                             </div>
                         </div>
                     </div>
@@ -249,22 +249,22 @@
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Interactive Art Pages</h3>
             </div>
             <div class="row">
-                <div style="padding-right: 2%;" class="col-md-5">
+                <div style="padding-right: 2%;" class="column" id="column2">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
+                            <img class="content-image" src="img/larger_tbs.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Inspired by <i>The Stranger</i>, 2018 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div style="padding-right: 2%;" class="col-md-5" >
+                <div style="padding-right: 2%;" class="column" id="column2">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/art/2019/artist_2019_4tb.png" style="width:100%">
+                            <img class="content-image" src="img/larger_tbs.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Inspired by <i>Macbeth</i>, 2017 </div>
                             </div>
@@ -287,4 +287,5 @@
     <script src="js/stylish-portfolio.js"></script>
     <script src="js/custom.js"></script>
 </body>
+
 </html>
