--- a/test2.html
+++ b/test2.html
@@ -25,23 +25,68 @@
                 <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
                 <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Digital & Physical Art</h3>
             </div>
-            <div class="row">
+            <div class="row" style="padding-bottom: 2%;">
                 <div style="padding-right: 2%;" class="column">
-                    <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_3tb.png" style="width:100%; padding-bottom: 12%;">
-                    <!-- <div class="captions"> Untitled </div> -->
-                    <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2021/artist_2021_3tb.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Untitled </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Mini Zine Series</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding-right: 2%;" class="column">
-                    <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_2.png" style="width:100%">
-                    <!-- <div class="captions"> Untitled </div> -->
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2021/artist_2021_2.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Untitled</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding-right: 2%;" class="column">
-                    <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%; padding-bottom: 12%;">
-                    <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2021/artist_2021_3tb.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Untitled </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Mini Zine Series</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div style="padding-right: 2%;" class="column">
-                    <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_1.png" style="width:100%">
-                    <!-- <div class="captions"> Mini Zine Series </div> -->
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2021/artist_2021_1.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Untitled </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
@@ -253,7 +298,7 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
-                            <img class="content-image" src="img/larger_tbs.png" style="width:100%">
+                            <img class="content-image" src="img/art/20182017/artist_2017.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Inspired by <i>The Stranger</i>, 2018 </div>
                             </div>
