editing index gallery

--- a/index.html
+++ b/index.html
@@ -25,63 +25,48 @@
             <div style="background: #000000; padding-top: 5%; padding-right: 5%; padding-left: 5%;">
                 <div class="row"> 
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/artist_2019_1.png" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_2.png" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_1.png" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%;">
                     </div>
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_1.png" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
                     </div> 
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/artist_2019_4.png" style="width:100%">
-                        <div class="captions"> Textile Design  </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/artist_2019_4.png" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/dev/2019/dev_2019_1tb.png" style="padding-bottom: 10%;">
+                        <img id="mahe" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_2.png" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mist.jpg" style="width:100%;">
                     </div>
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/lights.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="width:100%">
-                        <div class="captions">Fabricademy </div>
-                    </div>
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/underwater.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/mountainskies.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_3.png" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
+                    </div> 
                 </div> 
             </div>
+            <style>
+                img{
+                    width:100%;
+                }
+                #mahe{
+                    -webkit-transform: scaleX(-1);
+                    transform: scaleX(-1);
+                }
+            </style>
             <div class="footer"></div>
             <script src="js/jquery.min.js"></script>
             <script src="bootstrap/js/bootstrap.min.js"></script>
