--- a/developer.html
+++ b/developer.html
@@ -17,13 +17,14 @@
             <div class="bar"> </div>
             <div style="background: #000000; padding-top: 5%;">
               <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
-                  <!-- 2021  -->
+                  <!-- 2021  -->  <!-- 2020  -->
                   <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                      <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
-                      <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Portfolios</h3>
-                  </div>
+                    <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;" >2021</h3>
+                    <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: right; padding-left:73%;" >2020</h3>
+                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Portfolios</h3>
+                </div>
                 <div class="row">
-                    <div style="padding-right: 2%;" class="column" id="column2">
+                    <div style="padding-right: 2%;" class="column" id="column13">
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
@@ -34,7 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    <div style="padding-right: 2%;" class="column" id="column12">
+                    <div style="padding-right: 2%;" class="column" id="column23">
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
@@ -45,24 +46,35 @@
                             </div>
                         </div>
                     </div>
+                    <div style="padding-right: 2%;" class="column" id="column33">
+                      <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                          <div class="content">
+                              <div class="content-overlay"></div>
+                              <img class="content-image" src="img/larger_tbs.png" style="width:100%">
+                              <div class="content-details fadeIn-top">
+                                  <div class="captions">Former portfolio</div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
                 </div>
                   <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
                       <hr width="75%" color="#d8ff33" border-width="10px">
                   </div>
-                  <!-- 2020  -->
+                  <!-- 2019  -->
                   <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                      <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2020</h3>
-                      <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Wearable Art</h3>
-                      <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;">In collaboration with artist <a href="https://www.instagram.com/jacks.artfarts/"> Jackie Alexis</a></p>
+                      <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2019</h3>
+                      <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">First Wearable Tech Garment</h3>
+                      <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;"> Debuted at The High School of Fashion Industries Senior Fashion Show</p>
                   </div>
                   <div class="row">
                       <div style="padding-right: 2%;" class="column">
                           <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                               <div class="content">
                                   <div class="content-overlay"></div>
-                                  <img class="content-image" src="img/art/2020/artist_2020_1tb.png" style="width:100%">
+                                  <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
                                   <div class="content-details fadeIn-top">
-                                      <div class="captions"> Stamping, Scrap Cotton </div>
+                                      <!--  <div class="captions"> Stamping, Scrap Cotton </div> -->
                                   </div>
                               </div>
                           </div>
@@ -71,7 +83,6 @@
                                   <div class="content-overlay"></div>
                                   <img class="content-image" src="img/art/2020/artist_2020_5tb.png" style="width:100%">
                                   <div class="content-details fadeIn-top">
-                                      <div class="captions">Stamping, Scrap Denim</div>
                                   </div>
                               </div>
                           </div>
@@ -89,9 +100,8 @@
                           <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                               <div class="content">
                                   <div class="content-overlay"></div>
-                                  <img class="content-image" src="img/art/2020/artist_2020_3tb.png" style="width:100%">
+                                  <img class="content-image" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
                                   <div class="content-details fadeIn-top">
-                                      <div class="captions"> Stamping, Scrap Cotton & Vinyl </div>
                                   </div>
                               </div>
                           </div>
@@ -115,10 +125,13 @@
                           </div>
                       </div>
                   </div>
+                  <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Etsy Internship, Code Nation Studio Classes @ Google</h3>
+                </div>
                   <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
                       <hr width="75%" color="#d8ff33" border-width="10px">
                   </div>
-                  <!-- 2019  -->
+                  <!-- 2018  -->
                   <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                       <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2019</h3>
                       <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Textile Design</h3>
