--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2021/artist_2021_4tb.png" style="width:100%">
                     </div> 
                     <div style="padding-right: 2%;" class="column">
-                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/gears.jpg" style="padding-bottom: 10%;">
+                        <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_.png" style="padding-bottom: 10%;">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/artist_2019_4.png" style="padding-bottom: 10%;">
                         <img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/dev/2019/dev_2019_1tb.png" style="padding-bottom: 10%;">
                         <img id="mahe" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" src="img/art/2020/artist_2020_2.png" style="padding-bottom: 10%;">
