--- a/designer.html
+++ b/designer.html
@@ -10,85 +10,187 @@
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
             <link rel="stylesheet" href="css/footer.css">
-            <link rel="stylesheet" href="css/timeline.css">
+            <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
         <body>
             <div class="bar"> </div>
             <div style="background: #000000; padding-top: 5%;">
-                <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
-                  <div class="panel panel-default">
-                    <div class="panel-body">
-                      <ul class="timeline">
-                        <li>
-                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="timeline-heading">
-                              <h3>2021</h3>
-                              <p> test text</p>
-                            </div>
-                            <div class="timeline-body">
-							  <p >Designing for final project</p>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="timeline-inverted">
-                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="timeline-heading">
-                              <h3>2020</h3>
-                            </div>
-                            <div class="timeline-body">
-								<p >3D Design</p>
-								<p >Biodesign</p>
-								<p >etc</p>
-								<p >etc</p>
-								<p >etc</p>
-								<p >etc</p>
-								<p >Biodesign</p>
-                              <hr>
-                              <img style="height: auto; width: auto;" src="img/gears.jpg">
-                            </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="timeline-heading">
-                              <h3>2019</h3>
-                              <p>test</p>
-                            </div>
-                            <div class="timeline-body">
-                              <p >Textile Designer</p>
-                              <p >1st wearable</p>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="timeline-inverted">
-                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="timeline-heading">
-                              <h3>2018</h3>
-                            </div>
-                            <div class="timeline-body">
-							  <p > HSFI</p>
-							  <p > Awarded</p>
-                              <hr>
-                              <img style="height: auto; width: auto;" src="img/gears.jpg">
-                            </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="timeline-heading">
-                              <h3>2017</h3>
-                              <p>test</p>
-                            </div>
-                            <div class="timeline-body">
-                              <p > HSFI </p>
-                            </div>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
+              <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
+                  <!-- 2020  -->
+                  <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                    <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2020</h3>
+                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Biodesign</h3>
+                    <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;">Done in relation to or for the 2020 Biodesign Challenge</p>
                 </div>
+                <div class="row">
+                  <div style="padding-right: 2%;" class="column" id="column13">
+                      <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                          <div class="content">
+                              <div class="content-overlay"></div>
+                              <img class="content-image" src="img/art/20182017/artist_2017.png" style="width:100%">
+                              <div class="content-details fadeIn-top">
+                                  <div class="captions"> Fabricadadmey Documentation</div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div style="padding-right: 2%;" class="column" id="column23">
+                      <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                          <div class="content">
+                              <div class="content-overlay"></div>
+                              <img class="content-image" src="img/larger_tbs.png" style="width:100%">
+                              <div class="content-details fadeIn-top">
+                                  <div class="captions"> Isabiramontes.me </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div style="padding-right: 2%;" class="column" id="column33">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/bdc.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Final Presentation, A Commentary on Gender Inequality and Climate Change.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+                  <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
+                      <hr width="75%" color="#d8ff33" border-width="10px">
+                  </div>
+                  <!-- 2018  -->
+                  <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                      <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2019</h3>
+                      <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Textile Design</h3>
+                  </div>
+                  <div class="row" style="padding-bottom: 2%;">
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_1.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions">Final Project Mood Board </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions"> Final Project Motifs </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions"> filler text </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions">Plaid Textile Featuring Motif</div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_6.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions"> Final Project Motifs </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_2tb.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions"> filler text </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions">Plaid Textile Featuring Motif</div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_1.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions">Final Project Mood Board </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_4tb.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions"> filler text </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_3tb.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions">Plaid Textile Featuring Motif</div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div style="padding-right: 2%;" class="column">
+                          <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                              <div class="content">
+                                  <div class="content-overlay"></div>
+                                  <img class="content-image" src="img/art/2019/artist_2019_5.png" style="width:100%">
+                                  <div class="content-details fadeIn-top">
+                                      <div class="captions"> Indexed Color Motif Mood Board </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
+                      <hr width="75%" color="#d8ff33" border-width="10px">
+                  </div>
+                  <!-- 2018  -->
+
+              </div>
             </div>
             <div class="footer"></div>
             <script src="js/jquery.min.js"></script>
