uploaded new images

--- a/developer.html
+++ b/developer.html
@@ -41,7 +41,7 @@
                                 <div class="content-overlay"></div>
                                 <img class="content-image" src="img/larger_tbs.png" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions"> Isabiramontes.me </div>
+                                    <div class="captions"> <a href="http://isabiramontes.me/"> Isabiramontes.me </a> </div>
                                 </div>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                           <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                               <div class="content">
                                   <div class="content-overlay"></div>
-                                  <img class="content-image" src="img/art/2020/artist_2020_5tb.png" style="width:100%">
+                                  <img class="content-image" src="img/dev/2019/dev_2019_2tb.png" style="width:100%">
                                   <div class="content-details fadeIn-top">
                                   </div>
                               </div>
