--- a/designer.html
+++ b/designer.html
@@ -185,6 +185,69 @@
                           </div>
                       </div>
                   </div>
+                                  <!-- 2019  -->
+                                  <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">First Wearable Tech Garment</h3>
+                                    <p class="tab" style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 10%;"> Debuted at The High School of Fashion Industries Senior Fashion Show</p>
+                                </div>
+                                <div class="row">
+                                    <div style="padding-right: 2%;" class="column">
+                                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                                            <div class="content">
+                                                <div class="content-overlay"></div>
+                                                <img class="content-image" src="img/dev/2019/dev_2019_1tb.png" style="width:100%">
+                                                <div class="content-details fadeIn-top">
+                                                    <!--  <div class="captions"> Stamping, Scrap Cotton </div> -->
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                                            <div class="content">
+                                                <div class="content-overlay"></div>
+                                                <img class="content-image" src="img/dev/2019/dev_2019_2tb.png" style="width:100%">
+                                                <div class="content-details fadeIn-top">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="padding-right: 2%;" class="column">
+                                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                                            <div class="content">
+                                                <div class="content-overlay"></div>
+                                                <img class="content-image" src="img/art/2020/artist_2020_1.png" style="width:100%">
+                                                <div class="content-details fadeIn-top"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="padding-right: 2%;" class="column">
+                                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                                            <div class="content">
+                                                <div class="content-overlay"></div>
+                                                <img class="content-image" src="img/dev/2019/dev_2019_3tb.png" style="width:100%">
+                                                <div class="content-details fadeIn-top">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                                            <div class="content">
+                                                <div class="content-overlay"></div>
+                                                <img class="content-image" src="img/art/2020/artist_2020_2tb.png" style="width:100%">
+                                                <div class="content-details fadeIn-top">
+                                                    <div class="captions">Acrylic Pour, Scrap Denim</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="padding-right: 2%;" class="column">
+                                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                                            <div class="content">
+                                                <div class="content-overlay"></div>
+                                                <img class="content-image" src="img/art/2020/artist_2020_2.png" style="width:100%">
+                                                <div class="content-details fadeIn-top"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                   <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
                       <hr width="75%" color="#d8ff33" border-width="10px">
                   </div>
